# memflow-efi

./: .gitignore  Cargo.toml  README.md
memflow-efi-service/: Cargo.toml
memflow-efi-service/.cargo/: config.toml
memflow-efi-service/src/: hooks.rs  identity_page_table.rs  logger.rs  main.rs  mem_maps.rs  utils.rs  vtop.rs
scripts/: .gdbinit  create_disk.sh  debug.sh  efi_build.sh  efi_build_and_run.sh  gdbcmds  load-symbols.py  log.sh  log_once.sh  run_with_qemu.sh
scripts/efi_include/: startup.nsh
